# quality-weaver

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
.superpowers/sdd/: task-7-report.md  task-8-report.md
docs/migration/: viewpoint-provenance.yaml
docs/superpowers/plans/: 2026-07-13-quality-weaver-v1.md
docs/superpowers/specs/: 2026-07-13-quality-weaver-v1-design.md
evals/: README.md
evals/cases/: login.yaml
examples/login/requirements/: login.md
profiles/company-legacy/: profile.yaml
profiles/company-legacy/templates/: IT_TestCase.xlsx  UT_TestCase.xlsx
profiles/generic/: profile.yaml
schemas/: coverage-ledger.schema.json  requirement.schema.json  test-outline.schema.json  testcase.schema.json
skills/analyze-requirements/: SKILL.md
skills/design-testcases/: SKILL.md
skills/export-testcases/: SKILL.md
skills/initialize/: SKILL.md
skills/plan-coverage/: SKILL.md
skills/status/: SKILL.md
src/quality_weaver/: catalog.py  cli.py  coverage.py  exporters.py  io.py  legacy_inventory.py  models.py  profiles.py  schema.py  testcases.py  testmap.py  workspace.py
tests/contract/: test_schemas.py  test_skills.py  test_viewpoint_catalog.py
tests/fixtures/: legacy-viewpoint-inventory.yaml
tests/golden/: test_login_vertical_slice.py
tests/golden/expected/: testcases.md
tests/golden/login/: ledger.yaml  normalized.yaml  outline.yaml  test-map.md  testcases.md  testcases.yaml
tests/platform/: test_manifests.py
tests/unit/: test_catalog.py  test_cli.py  test_coverage.py  test_exporters.py  test_legacy_inventory.py  test_models.py  test_profiles.py  test_testcases.py  test_testmap.py  test_workspace.py
viewpoints/: catalog.yaml
viewpoints/cross-requirement/: data-continuity.yaml  e2e-journey.yaml  it-flow.yaml  navigation.yaml
viewpoints/local/: action-controls.yaml  advanced.yaml  api.yaml  container-structural.yaml  data-visualization.yaml  display-controls.yaml  input-validation.yaml  keyboard-mouse.yaml  ui-layout.yaml
viewpoints/system-wide/: batch-job-cron.yaml  mobile.yaml
