[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "quality-weaver"
version = "0.1.0"
description = "Viewpoint-driven manual test design workflow"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1,<4",
  "pydantic>=2.11,<3",
  "ruamel.yaml>=0.18,<0.19",
  "typer>=0.16,<1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "mypy>=1.16,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[project.scripts]
quality-weaver = "quality_weaver.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/quality_weaver"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["quality_weaver"]
